{-} tooltip onn dark mode, {~} color link fixed

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -9381,6 +9381,15 @@ body {
   color: var(--text) !important;
   background-color: var(--bg-color); }
 
+a {
+  color: var(--gray-muted) !important; }
+
+a:hover {
+  color: var(--primary) !important; }
+
+a:visited {
+  color: var(--light-gray) !important; }
+
 .table {
   color: var(--text) !important; }
 
